# LearnRust

./: .gitignore  Cargo.toml  LICENSE  README.md
Learn_4_2_reference/: Cargo.toml
Learn_4_3_slice/: Cargo.toml
Learn_5_1_structure/: Cargo.toml
_1_1_hello_world/: Cargo.toml
_1_2_hello_rust/: Cargo.toml
_2_1_guessing_game/: Cargo.toml
_3_1_variable_mutability/: Cargo.toml
__nerdy_rust_101__/: break_continue.rs  closure.rs  delete_exe_pdb_files.ps1  hash_map_car_orders.rs  hello_user.rs  if_else.rs  loops.rs  match_expression.rs  scope.rs  static_variables.rs  string.rs  work_with_hash_maps.rs
__nerdy_rust_101__/rusty_journal/: Cargo.toml
__nerdy_rust_101__/rusty_journal/src/: cli.rs  main.rs
learn_10_1_generic_data_types/: Cargo.toml
learn_10_2_traits/: Cargo.toml
learn_10_3_lifetimes/: Cargo.toml
learn_11_1_lib_tests/: Cargo.toml
learn_11_2_tests_run_ctrl/: Cargo.toml
learn_13_1_closures/: Cargo.toml
learn_13_2_invoke_closures/: Cargo.toml
learn_13_3_iterators/: Cargo.toml
learn_15_1_box_truck/: Cargo.toml
learn_1_1_hello_world/: Cargo.toml
learn_1_2_hello_rust/: Cargo.toml
learn_2_1_guessing_game/: Cargo.toml
learn_3_1_variable_mutability/: Cargo.toml
learn_3_2_data_type/: Cargo.toml
learn_3_3_functions/: Cargo.toml
learn_3_4_control_flow/: Cargo.toml
learn_3_5_type_conversion/: Cargo.toml
learn_4_1_ownership/: Cargo.toml
learn_4_2_reference/: Cargo.toml
learn_4_3_slice/: Cargo.toml
learn_5_1_structure/: Cargo.toml
learn_5_2_struct_rectangle/: Cargo.toml
learn_5_3_struct_method/: Cargo.toml
(+96 files in other folders)
